First Ride page fixes: Font colors and spacing

--- a/assets/sass/pages/_first-ride.scss
+++ b/assets/sass/pages/_first-ride.scss
@@ -14,6 +14,16 @@
     @include breakpoint(lg) {
       top: 90px;
     }
+
+    .h {
+     color: $color-text-gray;
+    }
+
+    p {
+      color: $color-text-gray;
+      line-height: 1.2;
+      margin-bottom: 20px;
+    }
   }
 
   .wrapper {
@@ -42,6 +52,16 @@
       font-size: 20px;
     }
 
+  }
+
+  #firstride-section {
+    .h, p {
+      color: $color-text-gray;
+    }
+
+    p {
+      line-height: 1.2;
+    }
   }
 
   .banner-image {
